--- a/index.html
+++ b/index.html
@@ -119,10 +119,10 @@
             This page will dynamically load pictures from the web, and display
             them in a cool way!
           </p>
-          <p class="text-center">
+          <p class="">
             <a href="#" class="btn btn-primary my-2">Load Images</a>
             <input
-              class="form-control w-50"
+              class="form-control d-inline-block"
               type="text"
               placeholder="enter query search"
             />
